# token-visualizer

./: .gitignore  README.md  flake.nix  index.html  package.json  vite.config.js
.github/workflows/: deploy.yml
src/: main.js  style.css
wasm/: Cargo.toml
wasm/src/: lib.rs
